k8s/apps/test/helmrelease-podinfo.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: podinfo
  namespace: test
spec:
  entryPoints:
    - websecure
  routes:
  - match: HostSNI(`podinfo.test`)
    services:
    - name: podinfo
      port: 9899
  tls:
    passthrough: true
