k8s/apps/test/helmrelease-podinfo2.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: podinfo2
  namespace: test
spec:
  entryPoints:
    - websecure
  routes:
  - match: HostSNI(`podinfo2.test`)
    services:
    - name: podinfo2
      port: 9899
  tls:
    passthrough: true
