k8s/apps/test/np.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-in-same-ns
  namespace: test
spec:
  podSelector: {}
  egress:
    - ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53
      to:
        - podSelector:
            matchLabels:
              k8s-app: kube-dns
          namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
    - to:
        - podSelector: {}
          namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: test
        - podSelector: {}
          namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: linkerd
        - ipBlock:
            cidr: 0.0.0.0/0
  policyTypes:
    - Egress
